--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                       <p>
                         Bra Scandinavia hade en önskan om att kunna gå ifrån sin
                         tidigare wordpress-sida, till en specialanpassad e-line.
-                        De var fortfarande bväldigt nöjda med sin grafiska
+                        De var fortfarande väldigt nöjda med sin grafiska
                         layout på sin wordpress, så jag fick i uppdrag att
                         återskapa denna till deras nya sida.
                       </p>
@@ -289,7 +289,7 @@
                         funktionella hemsidor åt gym och friskvårdsföretag.
                       </p>
                       <p>
-                        Här jag har byggt webkomponenter för att hantera deras
+                        Här har jag byggt webkomponenter för att hantera deras
                         bokningssystem, integration mellan kassa och kundprofil,
                         en separat sida som styr deras digitala skärmar på plats
                         i deras lokaler.
@@ -317,7 +317,7 @@
 
           <ul class="byO-projects">
             <li class="byO-project">
-              <h3 class="byO-project-title"><a href="www.spslenshus011.se">Spelens Hus i Norrköping</a></h3>
+              <h3 class="byO-project-title"><a href="www.spelenshus011.se">Spelens Hus i Norrköping</a></h3>
               <div class="byO-container">
                 <div class="byO-img-container">
                   <img
@@ -329,13 +329,12 @@
                 <div class="byO-text">
                   <p>
                     Jag har jobbat med att bygga en hemsida för Spelens Hus
-                    i Norrköping. Detta projekt har varit en del av mitt
-                    freelanceportfolio, och jag har även arbetat med att
-                    ändra och uppdatera hemsidan på egen hand.
+                    i Norrköping. Detta projekt är ett sätt att slå ihop två av mina
+                    stora intressen, programmering och spelhobbykulturen.
                   </p>
                   <p>
-                    Hemsidan har använt Wordpress som sin CMS, och har
-                    byggt egna block för att synliggöra de behov som fanns inför Augustifesten i Norrköping, efter Kulturnatten kommer jag påbörja arbetet med att skapa ett nytt tema för Spelens hus och mallar för de olika typer av block som kommer populera hemsidan.</p>
+                    Hemsidan använder Wordpress som sin CMS, och jag har
+                    byggt egna block för att synliggöra de behov som fanns inför Augustifesten i Norrköping, efter Kulturnatten (slutet av september) kommer jag påbörja arbetet med att skapa ett nytt tema för Spelens hus och mallar för de olika typer av block som kommer populera hemsidan.</p>
               </div>
             </li>
             <li class="byO-project">
@@ -404,7 +403,7 @@
               <h4>Spelhobbyn</h4>
               <p>
                 Jag är med och driver Spelens Hus i Norrköping, där jag ingår i
-                styrelsen och ansvarar för ekonomin, samt deras hemsida. utöver
+                styrelsen och ansvarar för ekonomin, samt deras hemsida. Utöver
                 att vara där och spela någon gång ibland.
               </p>
               <h4>Friluftsliv</h4>
